--- a/styles/custom.css
+++ b/styles/custom.css
@@ -144,7 +144,7 @@ p {
 .donate-plan-content {
     text-align: center;
 }
-.donate-title{
+.donate-title-2{
     font-size: 1rem;
     font-weight: 600;
 }
